New package: Yfjd v0.1.0
UUID: 36f29041-dd36-490d-b945-e44981033781
Repo: https://github.com/jdadavid/Yfjd.jl.git
Tree: 99359abb3c5183249d02b2d3a551c31391403f5a

--- a/Registry.toml
+++ b/Registry.toml
@@ -4,3 +4,4 @@ repo = "https://github.com/jdadavid/JDADRegistry"
 description = "JDAD's local registry"
 
 [packages]
+36f29041-dd36-490d-b945-e44981033781 = { name = "Yfjd", path = "Y/Yfjd" }
