New package: BogoMips v0.1.0
UUID: 9069222b-375b-4282-9f02-7ef1f33c832c
Repo: https://github.com/jdadavid/Bogomips.jl
Tree: f7d8f89d58637fc108d456e0291b670fca879632

--- a/Registry.toml
+++ b/Registry.toml
@@ -5,3 +5,4 @@ description = "JDAD's local registry"
 
 [packages]
 36f29041-dd36-490d-b945-e44981033781 = { name = "Yfjd", path = "Y/Yfjd" }
+9069222b-375b-4282-9f02-7ef1f33c832c = { name = "BogoMips", path = "B/BogoMips" }
