New package: RStableDistributionsParametrized v0.1.0
UUID: 378f5e4c-30ab-4cfa-a389-fea935f4598c
Repo: git@github.com:jdadavid/RStableDistributionsParametrized.jl
Tree: 48d3ed0094e385464c0d8889873e5812cd0e0371

--- a/Registry.toml
+++ b/Registry.toml
@@ -6,4 +6,5 @@ description = "JDAD's local registry"
 [packages]
 2c8b1d07-a307-4b2a-a759-6f21530356e3 = { name = "StableDistributionsParametrized", path = "S/StableDistributionsParametrized" }
 36f29041-dd36-490d-b945-e44981033781 = { name = "Yfjd", path = "Y/Yfjd" }
+378f5e4c-30ab-4cfa-a389-fea935f4598c = { name = "RStableDistributionsParametrized", path = "R/RStableDistributionsParametrized" }
 9069222b-375b-4282-9f02-7ef1f33c832c = { name = "BogoMips", path = "B/BogoMips" }
